--- a/package.json
+++ b/package.json
@@ -25,13 +25,17 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.81.1",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/dompurify": "^3.0.5",
     "@vercel/analytics": "^1.5.0",
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.3.0",
     "framer-motion": "^12.23.24",
+    "isomorphic-dompurify": "^2.32.0",
     "lucide-react": "^0.552.0",
     "nanoid": "^5.1.6",
     "next": "16.0.1",
@@ -41,6 +45,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
+    "react-swipeable": "^7.0.2",
     "resend": "^6.4.2",
     "sharp": "^0.34.5",
     "sonner": "^2.0.7",
